manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: dtx-dashboard-backend-rollout
spec:
  replicas: 3
  strategy:
    blueGreen:
      activeService: dtx-dashboard-backend-active-svc
      previewService: dtx-dashboard-backend-preview-svc
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 30
  selector:
    matchLabels:
      app: dtx-dashboard-backend
  template:
    metadata:
      labels:
        app: dtx-dashboard-backend
    spec:
      containers:
      - name: dtx-dashboard-backend
        image: rlarlgkd/dashboard-api:82
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: my-docker-secret
