manifests/svc-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-active-svc
spec:
  selector:
    app: my-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
